--- a/index.html
+++ b/index.html
@@ -505,10 +505,11 @@
     maxZoom: 18
   }).setView([-27.4698, 153.0251], 14);
   
-  // Add OpenStreetMap tiles
-  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    attribution: '© OpenStreetMap contributors',
-    subdomains: ['a','b','c']
+  // Add CartoDB Voyager tiles (colorful, modern map style - free, no API key needed)
+  L.tileLayer('https://{s}.basemaps.cartocdn.com/rastertiles/voyager/{z}/{x}/{y}{r}.png', {
+    attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
+    subdomains: 'abcd',
+    maxZoom: 20
   }).addTo(map);
 
   function birdSVG(col){
